--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,17 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.17.RELEASE'
     compile group: 'org.springframework', name: 'spring-web', version: '4.3.17.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
+    compile group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
+
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.17.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.3.0.Final'
-    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.17.RELEASE'
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.12.RELEASE'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.5.3'
+
 }
